Fix final issues, testing ok